--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport"
         content="width=device-width, minimum-scale=1, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
-    <title>Duskl!ght</title>
+    <title>Dusklight UI</title>
 </head>
 
 <body>
